Spacing fixes and minor tweaks.

--- a/less/plugins/blog.less
+++ b/less/plugins/blog.less
@@ -86,7 +86,7 @@ div[data-widget-type="blogsearch"] + div[role="main"] .blogpostlist {
 
 // Blog post list page
 .blogpostlist {
-	margin-top: 20px;
+	padding-top: 30px;
 
 	// Single blog post container
 	.post-article {
@@ -305,10 +305,10 @@ div[data-widget-type="blogsearch"] + div[role="main"] .blogpostlist {
 	.post-title {
 		color: white;
 		font-family: @font__h1--font-family;
-		font-size: bkscale(@font__h1--font-size, 0.85);
+		font-size: bkscale(@font__h1--font-size, 0.9);
 		font-weight: @font__h1--font-weight;
 		letter-spacing: @font__h1--letter-spacing;
-		line-height: bkscale(@font__h1--line-height, 0.85);
+		line-height: bkscale(@font__h1--line-height, 0.9);
 	    margin-bottom: 0;
 		padding-bottom: 0;
 		-webkit-font-smoothing: antialiased;
