--- a/less/widgets.less
+++ b/less/widgets.less
@@ -944,6 +944,6 @@ div[role="main"] {
 
 .clicktocall__phone-number-link {
     @media @mobile-650px {
-        color: @font-swatch7-color;
+        color: lighten(@color__button--text, 100%);
     }
 }
